<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/facebook_menu_item"
        android:actionViewClass="com.poggled.android.phototagger.ui.widget.FacebookUserFrameLayout"
        android:icon="@drawable/icon"
        android:showAsAction="always"
        android:title="Facebook"/>
    <item
        android:id="@+id/send_email"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="@string/send_email_menu"/>
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/refresh_menu"/>
    <item
        android:id="@+id/clear_cache"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/clear_cache_menu"/>
    
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="@string/settings_menu"/>
    
        <item
        android:id="@+id/check_"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="never"
        android:title="Check Server"/>
    
    

</menu>