<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/generic_survey_bg" >

            <ImageView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/email_introducing_bud_light_platinum"
                android:paddingTop="120dp"
                android:src="@drawable/email_intro" 
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="47dp"
                android:text="@string/email_instructions"
                android:textColor="#fff"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instructions"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/email_hint_email"
                android:inputType="textEmailAddress"
                android:paddingTop="0dp"
                android:textSize="24dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/email"
                android:layout_alignBottom="@+id/email"
                android:layout_toRightOf="@+id/email"
                android:paddingLeft="30dp"
                android:text="@string/email_submit"
                android:textColor="#999"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/poggled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="34dp"
                android:contentDescription="@string/email_brought_to_you_by_poggled"
                android:src="@drawable/email_brought_to_you_by_poggled" 
                android:visibility="gone"/>

        </RelativeLayout>
        
    </LinearLayout>
</ScrollView>

